# Lamash_Maksym

./: CMakeLists.txt  EnvUtils.cpp  EnvUtils.h  EnvironmentGUI.cpp  EnvironmentGUI.h  EnvironmentState.cpp  EnvironmentState.h  GUI.cpp  GUI.h  IAgent.h  Net_Hunter.cpp  Net_Hunter.h  Net_Victim.cpp  Net_Victim.h  NeuroCore.h  Perc_Critic.cpp  Perc_Critic.h  Perc_Sector.cpp  Perc_Sector.h  Perc_Vector.cpp  Perc_Vector.h  Perc_XY_coo.cpp  Perc_XY_coo.h  README.md  SimulationUtils.cpp  SimulationUtils.h  Trainer.cpp  Trainer.h  main.cpp
